--- a/forms/Cadastro Representante/Cadastro Representante.html
+++ b/forms/Cadastro Representante/Cadastro Representante.html
@@ -2,7 +2,7 @@
 <head>
     <link type="text/css" rel="stylesheet" href="./style.css"/>
     <link type="text/css" rel="stylesheet" href="/style-guide/css/fluig-style-guide.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="/portal/resources/js/jquery/jquery.js"></script>
     <script type="text/javascript" src="/portal/resources/js/jquery/jquery-ui.min.js"></script>
@@ -44,39 +44,29 @@
                                 </div>
                                 <div class="panel-body">
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="indicacao_email">E-mail</label>
-                                            <input type="text" name="indicacao_email" id="indicacao_email"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="indicacao_email">E-mail</label>
+                                        <input type="text" name="indicacao_email" id="indicacao_email"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="indicacao_cpf">CPF</label>
-                                            <input type="text" name="indicacao_cpf" id="indicacao_cpf"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="indicacao_cpf">CPF</label>
+                                        <input type="text" name="indicacao_cpf" id="indicacao_cpf"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="indicacao_cnpj">CNPJ</label>
-                                            <input type="text" name="indicacao_cnpj" id="indicacao_cnpj"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="indicacao_cnpj">CNPJ</label>
+                                        <input type="text" name="indicacao_cnpj" id="indicacao_cnpj"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="indicacao_empresa">Empresa</label>
-                                            <input type="text" name="indicacao_empresa" id="indicacao_empresa"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="indicacao_empresa">Empresa</label>
+                                        <input type="text" name="indicacao_empresa" id="indicacao_empresa"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="indicacao_regiao">Macro Região</label>
-                                            <input type="text" name="indicacao_regiao" id="indicacao_regiao"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="indicacao_regiao">Macro Região</label>
+                                        <input type="text" name="indicacao_regiao" id="indicacao_regiao"
+                                               class="form-control">
                                     </div>
                                 </div>
                             </div>
@@ -90,81 +80,64 @@
                                 </div>
                                 <div class="panel-body">
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="avaliacao_empresa">Empresa</label>
-                                            <input type="text" name="avaliacao_empresa" id="avaliacao_empresa"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="avaliacao_empresa">Empresa</label>
+                                        <input type="text" name="avaliacao_empresa" id="avaliacao_empresa"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="avaliacao_regiao">Macro Região</label>
-                                            <input type="text" name="avaliacao_regiao" id="avaliacao_regiao"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="avaliacao_regiao">Macro Região</label>
+                                        <input type="text" name="avaliacao_regiao" id="avaliacao_regiao"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="avaliacao_cpf">CPF</label>
-                                            <input type="text" name="avaliacao_cpf" id="avaliacao_cpf"
-                                                   class="form-control" mask="000.000.000-00">
-                                        </div>
+                                        <label for="avaliacao_cpf">CPF</label>
+                                        <input type="text" name="avaliacao_cpf" id="avaliacao_cpf"
+                                               class="form-control" mask="000.000.000-00">
                                     </div>
                                     <div class="col-md-3">
-                                        <div class="row">
-                                            <label for="avaliacao_situacao">Situação</label>
-                                            <input type="text" name="avaliacao_situacao" id="avaliacao_situacao"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="avaliacao_situacao">Situação</label>
+                                        <input type="text" name="avaliacao_situacao" id="avaliacao_situacao"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="row">
-                                            <label for="avaliacao_nome">Nome</label>
-                                            <input type="text" name="avaliacao_nome" id="avaliacao_nome"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="avaliacao_nome">Nome</label>
+                                        <input type="text" name="avaliacao_nome" id="avaliacao_nome"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="avaliacao_email">E-mail</label>
-                                            <input type="text" name="avaliacao_email" id="avaliacao_email"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="avaliacao_email">E-mail</label>
+                                        <input type="text" name="avaliacao_email" id="avaliacao_email"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="row">
-                                            <label for="avaliacao_cnpj">CNPJ</label>
-                                            <input type="text" name="avaliacao_cnpj" id="avaliacao_cnpj"
-                                                   class="form-control" mask="00.000.000/0000-00">
-                                        </div>
+
+                                        <label for="avaliacao_cnpj">CNPJ</label>
+                                        <input type="text" name="avaliacao_cnpj" id="avaliacao_cnpj"
+                                               class="form-control" mask="00.000.000/0000-00">
                                     </div>
                                     <div class="col-md-3">
-                                        <div class="row">
-                                            <label for="avaliacao_situacao2">Situação</label>
-                                            <input type="text" name="avaliacao_situacao2" id="avaliacao_situacao2"
-                                                   class="form-control">
-                                        </div>
+
+                                        <label for="avaliacao_situacao2">Situação</label>
+                                        <input type="text" name="avaliacao_situacao2" id="avaliacao_situacao2"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="row">
-                                            <label for="avaliacao_razao">Razão Sociaç</label>
-                                            <input type="text" name="avaliacao_razao" id="avaliacao_razao"
-                                                   class="form-control">
-                                        </div>
+
+                                        <label for="avaliacao_razao">Razão Sociaç</label>
+                                        <input type="text" name="avaliacao_razao" id="avaliacao_razao"
+                                               class="form-control">
+
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="row">
-                                            <label for="avaliacao_telefone">Telefone</label>
-                                            <input type="text" name="avaliacao_telefone" id="avaliacao_telefone"
-                                                   class="form-control" mask="(00)00000-0000">
-                                        </div>
+
+                                        <label for="avaliacao_telefone">Telefone</label>
+                                        <input type="text" name="avaliacao_telefone" id="avaliacao_telefone"
+                                               class="form-control" mask="(00)00000-0000">
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="row">
-                                            <label for="avaliacao_telefone2">Telefone</label>
-                                            <input type="text" name="avaliacao_telefone2" id="avaliacao_telefone2"
-                                                   class="form-control" mask="(00)00000-0000">
-                                        </div>
+                                        <label for="avaliacao_telefone2">Telefone</label>
+                                        <input type="text" name="avaliacao_telefone2" id="avaliacao_telefone2"
+                                               class="form-control" mask="(00)00000-0000">
                                     </div>
                                     <div class="panel panel-default">
                                         <div class="panel-body">
@@ -575,7 +548,7 @@
                                 </div>
                                 <div class="panel-body">
                                     <div class="row">
-                                        <div class="cold-md-3">
+                                        <div class="col-md-3">
                                             <p>Carta de Solicitação</p>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Visualizar"
@@ -588,7 +561,7 @@
                                                    name="documentos_solicitacao_anexar"
                                                    id="documentos_solicitacao_anexar">
                                         </div>
-                                        <div class="cold-md-3">
+                                        <div class="col-md-3">
                                             <p>Documento de ifentificação do Representante</p>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Visualizar"
@@ -599,7 +572,7 @@
                                                    name="documentos_identificacao_anexa"
                                                    id="documentos_identificacao_anexa">
                                         </div>
-                                        <div class="cold-md-3">
+                                        <div class="col-md-3">
                                             <p>Documento Bancário</p>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Visualizar"
@@ -609,7 +582,7 @@
                                                    name="documentos_bancario_anexar"
                                                    id="documentos_bancario_anexar">
                                         </div>
-                                        <div class="cold-md-3">
+                                        <div class="col-md-3">
                                             <p>Core do Representante</p>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Visualizar"
@@ -619,7 +592,7 @@
                                                    name="documentos_core_anexar"
                                                    id="documentos_core_anexar">
                                         </div>
-                                        <div class="cold-md-3">
+                                        <div class="col-md-3">
                                             <p>Core da Empresa</p>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Visualizar"
@@ -629,7 +602,7 @@
                                                    name="documentos_empresa_anexar"
                                                    id="documentos_empresa_anexar">
                                         </div>
-                                        <div class="cold-md-3">
+                                        <div class="col-md-3">
                                             <p>Inscrição municipal ou Alvará</p>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Visualizar"
@@ -639,7 +612,7 @@
                                                    name="documentos_alvara_anexar"
                                                    id="documentos_alvara_anexar">
                                         </div>
-                                        <div class="cold-md-3">
+                                        <div class="col-md-3">
                                             <p>Contrato Social</p>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Visualizar"
@@ -649,7 +622,7 @@
                                                    name="documentos_contrato_anexar"
                                                    id="documentos_contrato_anexar">
                                         </div>
-                                        <div class="cold-md-3">
+                                        <div class="col-md-3">
                                             <p>Comprovante de endereço para correspondência</p>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Visualizar"
