Desenvolvimento -> Feito o get na receitaws. Ajustato escopo do projeto com o formulário.

--- a/forms/Cadastro Representante/Cadastro Representante.html
+++ b/forms/Cadastro Representante/Cadastro Representante.html
@@ -2,7 +2,7 @@
 <head>
     <link type="text/css" rel="stylesheet" href="./style.css"/>
     <link type="text/css" rel="stylesheet" href="/style-guide/css/fluig-style-guide.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="/portal/resources/js/jquery/jquery.js"></script>
     <script type="text/javascript" src="/portal/resources/js/jquery/jquery-ui.min.js"></script>
@@ -44,39 +44,33 @@
                                 </div>
                                 <div class="panel-body">
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="indicacao_email">E-mail</label>
-                                            <input type="text" name="indicacao_email" id="indicacao_email"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="indicacao_email">E-mail</label>
+                                        <input type="text" name="indicacao_email" id="indicacao_email"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="indicacao_cpf">CPF</label>
-                                            <input type="text" name="indicacao_cpf" id="indicacao_cpf"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="indicacao_cpf">CPF</label>
+                                        <input type="text" name="indicacao_cpf" id="indicacao_cpf"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="indicacao_cnpj">CNPJ</label>
-                                            <input type="text" name="indicacao_cnpj" id="indicacao_cnpj"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="indicacao_cnpj">CNPJ</label>
+                                        <input type="text" name="indicacao_cnpj" id="indicacao_cnpj"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="indicacao_empresa">Empresa</label>
-                                            <input type="text" name="indicacao_empresa" id="indicacao_empresa"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="indicacao_empresa">Empresa</label>
+                                        <input type="text" name="indicacao_empresa" id="indicacao_empresa"
+                                               class="form-control">
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="row">
-                                            <label for="indicacao_regiao">Macro Região</label>
-                                            <input type="text" name="indicacao_regiao" id="indicacao_regiao"
-                                                   class="form-control">
-                                        </div>
+                                        <label for="indicacao_regiao">Macro Região</label>
+                                        <input type="text" name="indicacao_regiao" id="indicacao_regiao"
+                                               class="form-control">
+                                    </div>
+
+                                    <div class="col-md-4">
+                                        <button type="button" id="indicacao_btn_pesquisar" class="btn btn-info btn-pesquisar-representate">Pesquisar Representante</button>
                                     </div>
                                 </div>
                             </div>
